htmlを最新のものに変更

--- a/EmployeeManagementSystem_groupB/src/main/resources/templates/BME02.html
+++ b/EmployeeManagementSystem_groupB/src/main/resources/templates/BME02.html
@@ -3,9 +3,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="stylesheet" type="text/css" href="sample.css" />
-    <title>新規社員情報登録画面</title>
-    <meta name="description" content="新人情報登録画面です。">
+<link rel="stylesheet" type="text/css" href="default.css" />
+    <title>社員情報編集確認画面</title>
+    <link rel="icon" href="favicon.ico">
+    <meta name="description" content="社員情報編集確認画面です。">
 <style type="text/css">
     span{
         width: 130px;
@@ -22,9 +23,15 @@
 </style>
 </head>
 <body> 
+    <div class=form-BME02
+            background color ="#fafafa";>
+        
     <center>
         <table class="row">
-            <h1 style="width: 668px">社員情報修正確認</h1>
+            
+            <br>
+
+            <center><p style="font-size: x-large">社員情報編集確認</p></font></center>
                 
        <table border="2" style="width: 1015px">
             <tbody>
@@ -51,11 +58,39 @@
                 
             <p class="auto-style2">
 			<span class="auto-style1" style="width: 263px">以上の内容で完了しますか?</span><br>
-                <input id=Mod type="button" value= "修正画面に戻る" onclick="location.href='BME01.html';" style="font-size: medium; width: 120px;"> </a>
-                <input id=cancel type="button" value= "ホーム画面に戻る" onclick="location.href='index.html';" style="font-size: medium; width: 134px;"> </a>
-                <input id=log type="submit"value="完了" onclick="location.href='BME03.html';" style="font-size: medium; width: 96px;"> </a>
-            </p>
+            <div class="button-panel" style="width: 100%" align="center">
+               <center><input type="submit" class="button" title="Sign In" value="戻る" style="width: 31%" onclick="location.href='BME01.html'"></input>
+               <input type="submit" class="button" title="Sign In" value="完了" style="width: 31%" onclick="location.href='BME03.html'" ></input></center>
+            　　　　</div>
+
+		
+        </input>
+        　　　　　</div>
+            
+        
+        </form>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <hr>
+              <center><div> <a>〒110-0015 東京東上野台東市6丁目−2−番1号MPR東上野ビル10F</a></div></center>
+              <center><div>   <span style="width: 227px">© 2020 Sunseer corporation</span> </div></center>
+              
         </div>
-    </center>
-</body>
-</html>
+        </body>
+        </html>
