--- a/EmployeeManagementSystem_groupB/src/main/resources/templates/BME03.html
+++ b/EmployeeManagementSystem_groupB/src/main/resources/templates/BME03.html
@@ -1,44 +1,61 @@
 ﻿
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" 
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<link rel="stylesheet" type="text/css" href="default.css">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="stylesheet" type="text/css" href="sample.css" />
-    <title>新規社員情報登録画面</title>
-    <meta name="description" content="新人情報登録画面です。">
-<style type="text/css">
-    span{
-        width: 130px;
-        height: 37px;
-        display: inline-block;
-        text-align: justify;
-        text-justify: inter-ideograph;
-        -webkit-text-align:justify;
-        -moz-text-align: justify;
-    }
-.auto-style2 {
-	margin-left: 10px;
-	margin-right: 0px;
-	margin-top: 10px;
-	margin-bottom: 10px;
-}
+<meta content="ja" http-equiv="Content-Language" />
+<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
+<title>社員情報編集完了</title>
+<link rel="stylesheet" type="text/css" href="default.css" />
 </style>
 </head>
-<body> 
-    <center>
-        <table class="row">
-        <br><br>
-            <h1 style="width: 668px">社員情報編集完了</h1>
-            <br><br>
-            <p class="auto-style2" style="font-size: large">編集が完了しました。<br>
-            	編集された社員様の情報をご確認お願い致します。
-	        </p>
-			<p class="auto-style2" style="font-size: large">
+<br>
+	
+	<body>
+		<div class="form-wrapper">
+		<br>
+		<br>
+			<center><p style="font-size: x-large">社員情報編集完了</p></font></center>
 	<br>
-                <input id=complete type="button" value= "メイン画面委戻る" onclick="location.href='index.html';" style="font-size: medium"> </a>
-            </p>
-        </div>
-    </center>
+<form method="post"action="index.html">
+	<form method="post" action="index.html" style="height: 624px">
+		<table align="center">
+			<center><p>編集が完了しました。<p></center>
+			</p>
+			
+		</table align="center">
+		
+　　　　　　　<div class="button-panel" style="width: 100%" align="center" >
+	 　　　　　 
+	<input type="submit" class="button" title="Sign In" value="戻る" style="width: 31%" ></input>
+	
+	 
+	　　　　　</div>
+
+		
+		</input>
+	　　　　　</div>
+			
+		
+	</form>
+	<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<hr>
+		
+	<center><div> <a>〒110-0015 東京東上野台東市6丁目−2−番1号MPR東上野ビル10F</a></div></center>
+	<center><div>  <span>© 2020 Sunseer corporation</span> </div></center>
+</div>
 </body>
 </html>
