--- a/EmployeeManagementSystem_groupB/src/main/resources/templates/BNM02.html
+++ b/EmployeeManagementSystem_groupB/src/main/resources/templates/BNM02.html
@@ -1,12 +1,11 @@
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" 
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="stylesheet" type="text/css" href="sample.css" />
-    <title>新規社員情報登録画面</title>
-    <meta name="description" content="新人情報登録画面です。">
+<link rel="stylesheet" type="text/css" href="default.css" />
+    <title>新規社員登録確認画面</title>
+    <meta name="description" content="新規社員登録確認画面です。">
 <style type="text/css">
     span{
         width: 130px;
@@ -20,18 +19,18 @@
 .auto-style1 {
 	font-size: large;
 }
-.auto-style2 {
-	margin-left: 10px;
-	margin-right: 0px;
-	margin-top: 10px;
-	margin-bottom: 10px;
-}
 </style>
 </head>
 <body> 
+    <div class=form-BNM02
+            background color ="#fafafa";>
+        
     <center>
         <table class="row">
-            <h1 style="width: 668px">社員情報登録確認</h1>
+            
+            <br>
+
+            <center><p style="font-size: x-large">新規社員登録確認</p></font></center>
                 
        <table border="2" style="width: 1015px">
             <tbody>
@@ -55,16 +54,43 @@
                 </tr>
             </tbody>
         </table>
-
                 
             <p class="auto-style2">
-			<span class="auto-style1" style="width: 276px">以上の内容で完了しますか?</span><br>
-                <input id=Mod type="button" value= "登録画面に戻る" onclick="location.href='BME01.html';" style="font-size: medium; width: 120px;"> </a>
-                <input id=cancel type="button" value= "ホーム画面に戻る" onclick="location.href='index.html';" style="font-size: medium; width: 134px;"> </a>
-                <input id=log type="submit"value="完了" onclick="location.href='BME03.html';" style="font-size: medium; width: 96px;"> </a>
+			<span class="auto-style1" style="width: 263px">以上の内容で完了しますか?</span><br>
+            <div class="button-panel" style="width: 100%" align="center">
+               <center></center> <input type="submit" class="button" title="Sign In" value="戻る" style="width: 31%" align="center" onclick="location.href='BNM01.html'"></input>
+               <input type="submit" class="button" title="Sign In" value="完了" style="width: 31%" align="center" onclick="location.href='BNM03.html'"></input></center>
+                 
+            　　　　　</div>
 
-            </p>
+		
+        </input>
+        　　　　　</div>
+            
+        
+        </form>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <hr>
+              <center><div> <a>〒110-0015 東京東上野台東市6丁目−2−番1号MPR東上野ビル10F</a></div></center>
+              <center><div>   <span style="width: 227px">© 2020 Sunseer corporation</span> </div></center>
+              
         </div>
-    </center>
-</body>
-</html>
+        </body>
+        </html>
