--- a/EmployeeManagementSystem_groupB/src/main/resources/templates/index.html
+++ b/EmployeeManagementSystem_groupB/src/main/resources/templates/index.html
@@ -4,8 +4,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="stylesheet" type="text/css" href="sample.css" />
-<title>グループB管理システムトップ画面</title>
+<link rel="stylesheet" type="text/css" href="index.css" />
+<title>社員管理システム</title>
+<link rel="icon" href="favicon.ico">
 <style type="text/css">
 .auto-style5 {
 	font-size: small;
@@ -36,12 +37,16 @@
 </style>
 </head>
 <body>
-<div id="pagebody" style="width: 1429px">
+    
+    <div class=form-index>
+
+<div id="pagebody" style="width: 1000px">
 
 	<!-- ヘッダ -->
-	<div id="header" style="height: 71px"><h1><a href="index.dwt">グループB管理社員システム</a>
-	<a href="B0.html">　　　　　　　　　　　　　　　　　　　　　　　　　　　<span class="auto-style11">ログアウト</span></span></a><span class="auto-style7"></h1></div>
-	
+	<div id="header" style="height: 71px"><h1><a href="index.html">社員管理システム</a>
+	<a href="B0.html">　　　　　　　　　　　　　<span class="auto-style11">ログアウト</span></span></a><span class="auto-style7"></h1></div>
+    
+　 <!--サブメニュー-->
 	<div id="submenu" style="width: 303px; height: 497px;">
 		<div id="submenu_header" text-align: "center" style="height: 22px">
 		<div id="submenu_header" class="auto-style10">
@@ -116,7 +121,7 @@
 		</form>	
 	</div>
 	<!-- コンテンツ（中央と右の2カラム） -->
-	<div id="content" style="height: 513px; width: 1069px;" class="auto-style6">
+	<div id="content" style="height: 513px; width: 600px;" class="auto-style6">
 		<!-- ニュース（中央カラム） -->
 		<div id="全員社員">
 			<h2>&nbsp;&nbsp;&nbsp;社員全員一覧</h2>
@@ -424,9 +429,10 @@
         </table>
 
 		<br>
-		<hr>
+        <hr width="1000px">
+        <footer>
 		<center><div> <a>〒110-0015 東京東上野台東市6丁目−2−番1号MPR東上野ビル10F</a></div></center>
-		<center><div>  <span>© 2020 Sunseer corporation</span> </div></center>
+		<center><div>  <span>© 2020 Sunseer corporation</span> </div></center></footer>
 
 
 
