0529 更新 新規登録画面調整中

--- a/EmployeeManagementSystem_groupB/src/main/resources/templates/B0.html
+++ b/EmployeeManagementSystem_groupB/src/main/resources/templates/B0.html
@@ -17,13 +17,13 @@
 	<div class="form-wrapper">
 	<br>
 	<br>
-	<p style="text-align: center;">
-    <img src="../images/logo.jpg" height="83" width="406"/>
+	<p style="text-align: center">
+    <img src="../images/logo.jpg" height="83" width="406">
     </p>
-	<font><p style="font-size: xx-large">社員管理システム</p></font>
+	<center><font><p style="font-size: xx-large">社員管理システム</p></font><center>
 <br>
 <br>
-		<form th:action="@{/groupB/B0}" method="post" style="height: 296px">
+		<form th:action="@{/user/B0}" method="post" style="height: 296px">
 			<table align="center" style="width: 529px">
 				<tr>
 					<th style="width: 302px">　　　　　 メールアドレス：</th>
