--- a/EmployeeManagementSystem_groupB/src/main/resources/templates/BME02.html
+++ b/EmployeeManagementSystem_groupB/src/main/resources/templates/BME02.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" 
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja">
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<link rel = "shortcut icon" href="../resources/favicon.ico" th:href="@{/static/favicon.ico}">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="stylesheet" type="text/css" href="default.css" />
+<link rel="stylesheet" type="text/css" href="../css/default.css" />
     <title>社員情報編集確認画面</title>
     <link rel="icon" href="favicon.ico">
     <meta name="description" content="社員情報編集確認画面です。">
@@ -22,75 +22,49 @@
 }
 </style>
 </head>
-<body> 
-    <div class=form-BME02
-            background color ="#fafafa";>
-        
+<body>
     <center>
         <table class="row">
-            
-            <br>
+            <h1 style="width: 668px">社員情報修正確認</h1>
 
-            <center><p style="font-size: x-large">社員情報編集確認</p></font></center>
-                
-       <table border="2" style="width: 1015px">
-            <tbody>
-                <tr>
-                    <td rowspan="5" width="20%" class="text-center"><img src="http://placehold.jp/150x150.png" alt=""></td>
-                    <td width="35%">氏名：石丸理穂</td>
-                    <td width="35%">性別：女性</td>
-                    <tr>
-                    <td width="35%">フリガナ：イシマル　リホ</td>
-                    <td width="35%">部署：○○○○○○○○部署</td>
-                    <tr>
-                    <td width="35%">生年月日：1997/09/13</td>
-                    <td width="35%">メールアドレス：mail@sample.com</td>
-                </tr>
-                <tr>
-                    <td width="35%">電話番号:090-1234-5678</td>
-                    <td width="35%">住所：東京都中央区1-1-1</td>
-                    <tr>
-                    <td width="35%">学歴：○○○○大学○○○○学部○○○○学科</td>
-                    <td width="35%">特技:一輪車</td>
-                </tr>
-            </tbody>
-        </table>
-                
+       <span th:each="e : ${usersdata}"  enctype="multipart/form-data">
+	       <table border="2" style="width: 1015px">
+	            <tbody>
+		            <tr>
+		                <td rowspan="5" width="20%" class="text-center">
+		                <img th:src="@{/images/rotPhoto/{filename}(filename=${e.user_image})}" height="131" width="195"></td><!--写真追加部分-->
+		                <td width="35%" th:text="|氏名:${e.user_firstname} ${e.user_lastname}|"></td>
+		                <td width="35%"th:text="|性別:${e.user_gender}|"></td>
+		            </tr>
+		            <tr>
+		                <td width="35%" th:text="|フリガナ:${e.user_firstkata} ${e.user_lastkata}|"></td>
+		                <td width="35%" th:text="|部署:${e.depart_name}|"></td>
+		                <tr>
+		                    <td width="35%" th:text="|生年月日:${e.user_birth}|"></td>
+		                    <td width="35%" th:text="|メールアドレス:${e.user_mail}|"></td>
+		                </tr>
+		            </tr>
+		            <tr>
+		                <td width="35%" th:text="|電話番号:${e.user_tele}|"></td>
+		                <td width="35%" th:text="|住所:${e.user_address}|"></td>
+		            </tr>
+		            <tr>
+		                <td width="35%" th:text="|学歴:${e.user_education}|"></td>
+		                <td width="35%" th:text="|特技:${e.user_special}|"></td>
+		            </tr>
+	            </tbody>
+	        </table>
+		</span>
+
             <p class="auto-style2">
-			<span class="auto-style1" style="width: 263px">以上の内容で完了しますか?</span><br>
-            <div class="button-panel" style="width: 100%" align="center">
-               <center><input type="submit" class="button" title="Sign In" value="戻る" style="width: 31%" onclick="location.href='BME01.html'"></input>
-               <input type="submit" class="button" title="Sign In" value="完了" style="width: 31%" onclick="location.href='BME03.html'" ></input></center>
-            　　　　</div>
-
-		
-        </input>
-        　　　　　</div>
-            
-        
-        </form>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <hr>
-              <center><div> <a>〒110-0015 東京東上野台東市6丁目−2−番1号MPR東上野ビル10F</a></div></center>
-              <center><div>   <span style="width: 227px">© 2020 Sunseer corporation</span> </div></center>
-              
-        </div>
-        </body>
-        </html>
+				<span class="auto-style1" style="width: 263px">以上の内容で完了しますか?</span>
+				<br>
+	                <a th:href="@{/user/BME01}"><input id=Mod type="button" value= "修正画面に戻る"style="font-size: medium; width: 120px;"> </a>
+	                <a th:href="@{/user/newindex}"><input id=cancel type="button" value= "ホーム画面に戻る"style="font-size: medium; width: 134px;"> </a>
+	                <a th:href="@{/user/newindex}"><input id=log type="submit" value="完了" style="font-size: medium; width: 96px;"></a>
+				</br>
+            </p>
+        </table>
+    </center>
+</body>
+</html>
