--- a/EmployeeManagementSystem_groupB/src/main/resources/templates/BME03.html
+++ b/EmployeeManagementSystem_groupB/src/main/resources/templates/BME03.html
@@ -23,7 +23,7 @@
 			<center><p>編集が完了しました。<p></center>
 			</p>
 
-		</table align="center">
+		</table>
 
 　　　　　　　<div class="button-panel" style="width: 100%" align="center" >
 	 　　　　　
