--- a/EmployeeManagementSystem_groupB/src/main/resources/templates/BME01.html
+++ b/EmployeeManagementSystem_groupB/src/main/resources/templates/BME01.html
@@ -1,7 +1,6 @@
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja">
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<link rel = "shortcut icon" href="../resources/favicon.ico" th:href="@{/static/favicon.ico}">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" type="text/css" href="../css/default.css" />
@@ -25,99 +24,93 @@
 <body>
 <div class="form-wrapper">
     <center>
+    <form th:action="@{/user/BME01}" method="post" th:each="e : ${user}" enctype="multipart/form-data">
         <table class="auto-style1">
                 <br>
                 <center><p style="font-size: x-large">社員情報編集</p></font></center>
                 <br>
             <tr>
+            <input type="hidden" name="user_id" th:value="${e.user_id}">
                  <td> <span>氏名（漢字）※</span>
-                    氏:<input type="name" style="width:180px" required>
-                    　名:<input type="name" style="width:180px" required>
+                    氏:<input type="user_firstname" name = "user_firstname" style="width:100px" th:value="${e.user_firstname}">
+                    名:<input type="user_lastname" name = "user_lastname" style="width:100px" th:value="${e.user_lastname}">
                  </td>
             </tr>
             <tr>
                  <td>
                      <span>カタカナ※</span>
-                    シ:<input type="name" style="width:180px" required>
-                    メイ:<input type="name" style="width:180px" required>
+                    シ:<input type="user_firstkata" name = "user_firstkata" style="width:100px" th:value="${e.user_firstkata}">
+                    メイ:<input type="user_lastkata" name = "user_lastkata" style="width:100px" th:value="${e.user_lastkata}">
                  </td>
             </tr>
             <tr>
                  <td>
                     <span>性別※</span>
                     男
-                    <input type="radio" name="男" >
+                    <input type="radio" name="user_gender" th:checked="${e.getUser_gender()=='男性'}"　value="男性">
                     女
-                    <input type="radio" name="女" >
+                    <input type="radio" name="user_gender" th:checked="${e.getUser_gender()=='女性'}"　value="女性">
                  </td>
             </tr>
             <tr>
                 <td>
                     <span>所属部署※</span>
-                    <input type="text" style="width:200px" required>
+                    <input type="text" name="depart_name" style="width:200px" th:value="${e.depart_name}">
                 </td>
             </tr>
             <tr>
                 <td>
                     <span>生年月日※</span>
-                    <input type="date" style="width:200px" required>
+                    <input type="date" name="user_birth" style="width:200px" th:value="${e.user_birth}">
                 </td>
             </tr>
             <tr>
                 <td>
                     <span>電話番号※</span>
-                     <input type="tel" style="width:200px" required>
+                     <input type="text" name="user_tele" style="width:200px" th:value="${e.user_tele}">
                 </td>
             </tr>
             <tr>
                 <td>
                     <span>メールアドレス※</span>
-                    <input type="text" style="width:200px" required>
+                    <input type="text" name="user_mail" style="width:200px" th:value="${e.user_mail}">
                 </td>
             </tr>
             <tr>
                 <td>
                     <span>住所※</span>
-                <input type="text" style="width:200px" required>
+                <input type="text" name="user_address" style="width:200px" th:value="${e.user_address}">
                 </td>
             </tr>
             <tr>
                 <td>
                     <span>最終学歴※</span>
-                    <input type="text" style="width:200px" required>
+                    <input type="text" name="user_education" style="width:200px" th:value="${e.user_education}">
                 </td>
             </tr>
             <tr>
                 <td>
                     <span>特技</span>
-                    <input type="text" style="width:200px">
+                    <input type="text" name="user_special" style="width:200px" th:value="${e.user_special}">
                 </td>
             </tr>
             <tr>
                <td>
                 <span>顔写真</span>
-                <input type="file"  name="fileUpload"/>
-                <input type="submit" value="アップロード"/>
+                <input type="file"  name="user_image" >
                </td>
             </tr>
-            </table>
-                　<div class="button-panel" style="width: 100%" align="center">
-                 <center>    <input type="submit" class="button" title="Sign In" value="キャンセル" style="width: 31%" onclick="location.href='newindex.html'"></input>
-                    <input type="submit" class="button" title="Sign In" value="確認" style="width: 31%" onclick="location.href='BME02.html'"></input></center>
+        </table>
+	    <div class="button-panel" style="width: 100%" align="center"><a th:href="@{/user/newindex}">
+ 			<center>    <input type="submit" name="cancel" class="button" title="Sign In" value="キャンセル" style="width: 31%"></a>
+            			<input type="submit" name="confirm" class="button" title="Sign In" value="確認" style="width: 31%"></input>
+            </center>
+        </div>
+	</form>
+    <br>
+    <hr>
+          <center><div> <a>〒110-0015 東京東上野台東市6丁目−2−番1号MPR東上野ビル10F</a></div></center>
+          <center><div>   <span style="width: 227px">© 2020 Sunseer corporation</span> </div></center>
 
-                　　　　　</div>
-
-
-            </input>
-            　　　　　</div>
-
-
-            </form>
-            <br>
-            <hr>
-                  <center><div> <a>〒110-0015 東京東上野台東市6丁目−2−番1号MPR東上野ビル10F</a></div></center>
-                  <center><div>   <span style="width: 227px">© 2020 Sunseer corporation</span> </div></center>
-
-            </div>
-            </body>
-            </html>
+</body>
+</html>
