--- a/EmployeeManagementSystem_groupB/src/main/resources/templates/newindex.html
+++ b/EmployeeManagementSystem_groupB/src/main/resources/templates/newindex.html
@@ -85,7 +85,7 @@
                             </tr>
                             <tr>
                                 <th>特技：</th>
-                                <td style="width: 137px"><input type="text" value="" name="user_spcial"></td>
+                                <td style="width: 137px"><input type="text" value="" name="user_special"></td>
                             </tr>
                         </table>
                         <table class="research_botton" align="right">
