--- a/EmployeeManagementSystem_groupB/src/main/resources/templates/BNM01.html
+++ b/EmployeeManagementSystem_groupB/src/main/resources/templates/BNM01.html
@@ -1,135 +1,134 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja">
+<html xmlns:th="http://www.thymeleaf.org"></html>
 <link rel = "shortcut icon" href="../resources/favicon.ico" th:href="@{/static/favicon.ico}">
 <head>
-<meta charset="UTF-8">
+	<meta charset="UTF-8">
 
-<script type="text/javascript"  src="../js/checkSpell.js"></script>
+	<link rel="stylesheet" type="text/css" href="../css/newindex.css"/>
+	<script type="text/javascript"  src="../js/checkSpell.js"></script>
     <title>新規社員情報登録画面</title>
     <meta name="description" content="新人情報登録画面です。">
-<style type="text/css">
-    span{
-        width: 130px;
-        height: 37px;
-        display: inline-block;
-        text-align: justify;
-        text-justify: inter-ideograph;
-        -webkit-text-align:justify;
-        -moz-text-align: justify;
-    }
-.auto-style1 {
-	margin-top: 48px;
-}
-</style>
-<link rel="stylesheet" type="text/css" href="../css/default.css">
+	<style type="text/css">
+	    span{
+	        width: 130px;
+	        height: 37px;
+	        display: inline-block;
+	        text-align: justify;
+	        text-justify: inter-ideograph;
+	        -webkit-text-align:justify;
+	        -moz-text-align: justify;
+	    }
+		.auto-style1 {
+			margin-top: 48px;
+		}
+	</style>
 </head>
 <body>
-<form th:action="@{/user/BNM01}" method="post" enctype="multipart/form-data">
-<div class="form-wrapper">
+	<form th:action="@{/user/BNM01}" method="post" enctype="multipart/form-data">
+		<div class="form-wrapper">
+		    <center>
+		        <table class="auto-style1">
+			        <p type="hidden" id="flag" value="false"></p>
+		            <br>
+		            	<center><p style="font-size: x-large">新規社員登録</p></font></center>
+		            <br>
+					<tr>
+		                 <td> <span>氏名（漢字）※</span>
+		                    氏:<input type="text" id="firstname" name="user_firstname" style="width:100px" required>
+		                    　名:<input type="text" id="lastname" name="user_lastname" style="width:100px" required>
+		                 <span id="name_error1" style="display:none;font-size: small;text-align:center;width:400px;">入力形式が不正です</span>
+		                 <span id="name_error2" style="display:none;font-size: small;text-align:center;width:400px;">入力形式が不正です</span>
+		                 </td>
+		            </tr>
+		            <tr>
+		                 <td>
+		                     <span>カタカナ※</span>
+		                    シ:<input type="text" id="firstkata" name="user_firstkata"  style="width:100px" required>
+		                    メイ:<input type="text" id="lastkata" name="user_lastkata"  class="tipped" style="width:100px" required>
+		                 <span id="name_error3" style="display:none;font-size: small;text-align:center;width:400px;">入力形式が不正です</span>
+		                 <span id="name_error4" style="display:none;font-size: small;text-align:center;width:400px;">入力形式が不正です</span>
+		                 </td>
+		            </tr>
+		            <tr>
+		                 <td>
+		                    <span>性別※</span>
+							男<input type="radio" name="user_gender"  class="tipped" value="男性">
+							女<input type="radio" name="user_gender" class="tipped"  value="女性">
+		                 </td>
+		            </tr>
+		            <tr>
+		                <td>
+		                    <span>所属部署※</span>
+		                    <select class="tipped" name="depart_name" required>
+		              		<option value="">Choose...</option>
+		              		<option>部署A</option>
+		              		<option>部署B</option>
+		              		<option>部署C</option>
+		            		</select>
+		                </td>
+		            </tr>
+		            <tr>
+		                <td>
+		                    <span>生年月日※</span>
+		                    <input type="date" name="user_birth"  class="tipped" style="width:200px" required>
+		                </td>
+		            </tr>
+		            <tr>
+		                <td>
+		                    <span>電話番号※</span>
+		                     <input type="text" id="tele" name="user_tele"  class="tipped" style="width:200px" placeholder="11桁の英数字" maxlength="13" required>
+		                	<span id="tele_error" style="display: none;font-size: small;text-align:center;width:400px;">形式が不正です</span>
+		                </td>
+		            </tr>
+		            <tr>
+		                <td>
+		                    <span>メールアドレス※</span>
+		                    <input type="text" id="mail" name="user_mail" style="width:200px" required>
+		                	<span id="mail_error" style="display: none;font-size: small;text-align:center;width:450px;">メールアドレスの形式が不正です</span>
+		                </td>
+		            </tr>
+		            <tr>
+		                <td>
+		                    <span>住所※</span>
+		                <input type="text" name="user_address" style="width:200px" required>
+		                </td>
+		            </tr>
+		            <tr>
+		                <td>
+		                    <span>最終学歴※</span>
+		                    <input type="text" name="user_education" style="width:200px" required>
+		                </td>
+		            </tr>
+		            <tr>
+		                <td>
+		                    <span>特技</span>
+		                    <input type="text" name="user_special" style="width:200px">
+		                </td>
+		            </tr>
+		            <tr>
+						<td>
+							<span>顔写真</span>
+							<input type="file"  name="user_image" value="">
+						</td>
+		            </tr>
 
-    <center>
-        <table class="auto-style1">
-        <p type="hidden" id="flag" value="false"></p>
-                <br>
-                <center><p style="font-size: x-large">新規社員登録</p></font></center>
-                <br>
-            <tr>
-                 <td> <span>氏名（漢字）※</span>
-                    氏:<input type="text" class="tipped" name="user_firstname" style="width:100px" onclick="check_name(this);" required>
-                    名:<input type="text" class="tipped"  name="user_lastname" style="width:100px" onclick="check_name(this);" required>
-                 <span id="name_error1" style="display:none;font-size: small;text-align:center;width:400px;">入力形式が不正です</span>
-                 </td>
-            </tr>
-            <tr>
-                 <td>
-                     <span>カタカナ※</span>
-                    シ:<input type="text" name="user_firstkata" class="tipped"  style="width:100px" onclick="check_kata(this);" required>
-                    メイ:<input type="text" name="user_lastkata"  class="tipped" style="width:100px" onclick="check_kata(this);" required>
-                 <span id="name_error2" style="display:none;font-size: small;text-align:center;width:400px;">入力形式が不正です</span>
-                 </td>
-            </tr>
-            <tr>
-                 <td>
-                    <span>性別※</span>
-					男<input type="radio" name="user_gender"  class="tipped" value="男性">
-					女<input type="radio" name="user_gender" class="tipped"  value="女性">
-                 </td>
-            </tr>
-            <tr>
-                <td>
-                    <span>所属部署※</span>
-                    <select class="tipped" name="depart_name" required>
-              		<option value="">Choose...</option>
-              		<option>部署A</option>
-              		<option>部署B</option>
-              		<option>部署C</option>
-            		</select>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <span>生年月日※</span>
-                    <input type="date" name="user_birth"  class="tipped" style="width:200px" required>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <span>電話番号※</span>
-                     <input type="text" name="user_tele"  class="tipped" style="width:200px" placeholder="11桁の英数字" maxlength="13" onclick="check_num(this);check_tele();" required>
-                	<span id="tele_error" style="display: none;font-size: small;text-align:center;width:400px;">形式が不正です</span>
-                </td>
-            </tr>
-
-            <tr>
-                <td>
-                    <span>メールアドレス※</span>
-                    <input type="text" name="user_mail"  class="tipped" style="width:200px" onclick="check_half(this);check_mail()" required>
-                	<span id="mail_error" style="display: none;font-size: small;text-align:center;width:450px;">メールアドレスの形式が不正です</span>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <span>住所※</span>
-                <input type="text" name="user_address"  class="tipped" style="width:200px" required>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <span>最終学歴※</span>
-                    <input type="text" name="user_education"  class="tipped" style="width:200px" required>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <span>特技</span>
-                    <input type="text" name="user_special" style="width:200px">
-                </td>
-            </tr>
-
-
-            <tr>
-               <td>
-                <span>顔写真</span>
-                <input type="file"  name="user_image" value="">
-               </td>
-            </tr>
-
-                 <table class="button-panel" style="width: 100%" align="center">
-                 <a th:href="@{/user/newindex}"><input type="button" value="キャンセル" style="width: 31%" align="center"></a>
-                 <input type="button" id="submit" value="確認" style="width: 31%" align="center" onclick="check_flag();">
-
-
-               </table>
-        </table>
-		</center>
-        </div>
-
-         </form>
-            <br>
-            <hr>
-                  <center><div> <a>〒110-0015 東京東上野台東市6丁目−2−番1号MPR東上野ビル10F</a></div></center>
-                  <center><div>   <span style="width: 227px">© 2020 Sunseer corporation</span> </div></center>
-
-            </div>
-            </body>
-            </html>
+		            <table>
+		                <div class="button-panel" style="width: 100%" align="center">
+			                <center>
+				                <a th:href="@{/user/newindex}"><input type="button" class="button" value="キャンセル" style="width: 31%" align="center"></a>
+				                <input type="button" class="button" id="submit" value="確認" style="width: 31%" align="center" onclick="check_flag();">
+			                </center>
+						</div>
+					</table>
+					<br>
+					<hr>
+				</table>
+			</center>
+		</div>
+	</form>
+	<center><div> <a>〒110-0015 東京東上野台東市6丁目−2−番1号MPR東上野ビル10F</a></div></center>
+	<center><div>   <span style="width: 227px">© 2020 Sunseer corporation</span> </div></center>
+</body>
+</html>
